crates/mun_codegen/src/snapshots/mun_codegen__test__update_parameter.snap
---
source: crates/mun_codegen/src/test.rs
expression: "\n    pub fn add_three(a:i32) -> i32 {\n      a += 3;\n      a\n    }\n    "
---
; == FILE IR (mod) =====================================
; ModuleID = 'fileir:mod'
source_filename = "fileir:mod"

@global_type_lookup_table = external global [1 x i64*]

define i32 @add_three(i32 %0) {
body:
  %add = add i32 %0, 3
  ret i32 %add
}

; == GROUP IR (mod) ====================================
; ModuleID = 'filegroupir:mod'
source_filename = "filegroupir:mod"

@global_type_lookup_table = global [1 x i64*] zeroinitializer
