crates/mun_codegen/src/snapshots/mun_codegen__test__void_return.snap
---
source: crates/mun_codegen/src/test.rs
expression: "\n    fn bar() {\n        let a = 3;\n    }\n    pub fn foo(a:i32) {\n        let c = bar()\n    }\n    "
---
; == FILE IR (mod) =====================================
; ModuleID = 'fileir:mod'
source_filename = "fileir:mod"

@global_type_lookup_table = external global [1 x i64*]

define void @bar() {
body:
  ret void
}

define void @foo(i32 %0) {
body:
  call void @bar()
  ret void
}

; == GROUP IR (mod) ====================================
; ModuleID = 'filegroupir:mod'
source_filename = "filegroupir:mod"

@global_type_lookup_table = global [1 x i64*] zeroinitializer
